# cysgp4

./: .buildinfo  .gitignore  CHANGES.rst  MANIFEST.in  README  README.md  README.rst  azure-pipelines.yml  dev-requirements.txt  environment-dev.yaml  genindex.html  importing_cysgp4.html  index.html  install.html  license.html  objects.inv  pip-requirements  pyproject.toml  quick_tour.html  search.html  searchindex.js  setup.cfg  setup.py  test_cysgp4.py  tox.ini  user_manual.html
.ci/: build-wheels.sh  build_wheels.sh
.doctrees/: importing_cysgp4.doctree  index.doctree  install.doctree  license.doctree  quick_tour.doctree  user_manual.doctree
.doctrees/api/: cysgp4.PyCoordGeodetic.doctree  cysgp4.PyCoordTopocentric.doctree  cysgp4.PyDateTime.doctree  cysgp4.PyEci.doctree  cysgp4.PyObserver.doctree  cysgp4.PyTle.doctree  cysgp4.Satellite.doctree  cysgp4.eci_to_geo.doctree  cysgp4.geo_to_eci.doctree  cysgp4.get_example_tles.doctree  cysgp4.lookangles.doctree  cysgp4.propagate_many.doctree  cysgp4.propagate_many_sgp4.doctree  cysgp4.propagate_many_slow.doctree  cysgp4.satellite_mean_motion.doctree  cysgp4.set_num_threads.doctree  cysgp4.test.doctree  cysgp4.tle_checksum.doctree  cysgp4.tle_linestrings_from_orbital_parameters.doctree  cysgp4.tle_tuples_from_text.doctree  cysgp4.tles_from_text.doctree
_modules/: index.html
_modules/cysgp4/: helpers.html  init_testrunner.html
_sources/: index.rst.txt  install.rst.txt  license.rst.txt  quick_tour.rst.txt  user_manual.rst.txt
_sources/api/: cysgp4.PyCoordGeodetic.rst.txt  cysgp4.PyDateTime.rst.txt  cysgp4.PyEci.rst.txt  cysgp4.get_example_tles.rst.txt  cysgp4.lookangles.rst.txt  cysgp4.propagate_many.rst.txt  cysgp4.satellite_mean_motion.rst.txt  cysgp4.set_num_threads.rst.txt  cysgp4.tle_linestrings_from_orbital_parameters.rst.txt  cysgp4.tle_tuples_from_text.rst.txt
_static/: documentation_options.js
api/: cysgp4.PyCoordGeodetic.html  cysgp4.PyCoordTopocentric.html  cysgp4.PyDateTime.html  cysgp4.PyEci.html  cysgp4.PyObserver.html  cysgp4.PyTle.html  cysgp4.Satellite.html  cysgp4.eci_to_geo.html  cysgp4.geo_to_eci.html  cysgp4.get_example_tles.html  cysgp4.lookangles.html  cysgp4.propagate_many.html  cysgp4.propagate_many_sgp4.html  cysgp4.propagate_many_slow.html  cysgp4.satellite_mean_motion.html  cysgp4.set_num_threads.html  cysgp4.test.html  cysgp4.tle_checksum.html  cysgp4.tle_linestrings_from_orbital_parameters.html  cysgp4.tle_tuples_from_text.html  cysgp4.tles_from_text.html
cextern/sgp4-05d8cc2fc596/libsgp4/: DateTime.h  Eci.h  Observer.h  SGP4.cpp  SGP4.h
cextern/sgp4-f5cb54b3/libsgp4/: CoordTopocentric.h  Eci.h  Observer.h  SGP4.cc  SGP4.h
conda-forge-recipe/: meta.yaml
cysgp4/: __init__.py  cysgp4.pxd  cysgp4.pyx  helpers.py  init_testrunner.py  setup_package.py  utils.cpp  utils.pxd  utils.pyx  version.py
cysgp4/tests/: conftest.py  test_cysgp4.py  test_utils.py
cysgp4/tests/data/: science.txt
docs/: conf.py  index.rst  install.rst  license.rst  quick_tour.rst  user_manual.rst
latest/: .buildinfo  genindex.html  importing_cysgp4.html  index.html  install.html  license.html  objects.inv  quick_tour.html  search.html  searchindex.js  user_manual.html
latest/.doctrees/: importing_cysgp4.doctree  index.doctree  install.doctree  license.doctree  quick_tour.doctree  user_manual.doctree
latest/.doctrees/api/: cysgp4.PyCoordGeodetic.doctree  cysgp4.PyCoordTopocentric.doctree  cysgp4.PyDateTime.doctree  cysgp4.PyEci.doctree  cysgp4.PyObserver.doctree  cysgp4.PyTle.doctree  cysgp4.Satellite.doctree  cysgp4.eci_to_geo.doctree  cysgp4.geo_to_eci.doctree  cysgp4.get_example_tles.doctree  cysgp4.lookangles.doctree  cysgp4.propagate_many.doctree  cysgp4.propagate_many_sgp4.doctree  cysgp4.propagate_many_slow.doctree  cysgp4.satellite_mean_motion.doctree  cysgp4.set_num_threads.doctree  cysgp4.test.doctree  cysgp4.tle_checksum.doctree  cysgp4.tle_linestrings_from_orbital_parameters.doctree  cysgp4.tle_tuples_from_text.doctree  cysgp4.tles_from_text.doctree
latest/_modules/: cysgp4.html  index.html
latest/_modules/cysgp4/: helpers.html  init_testrunner.html
latest/_sources/: importing_cysgp4.rst.txt  user_manual.rst.txt
latest/_sources/api/: cysgp4.PyCoordTopocentric.rst.txt  cysgp4.PyDateTime.rst.txt  cysgp4.PyObserver.rst.txt  cysgp4.PyTle.rst.txt  cysgp4.Satellite.rst.txt  cysgp4.eci_to_geo.rst.txt  cysgp4.geo_to_eci.rst.txt  cysgp4.propagate_many_sgp4.rst.txt  cysgp4.propagate_many_slow.rst.txt  cysgp4.test.rst.txt  cysgp4.tle_checksum.rst.txt  cysgp4.tles_from_text.rst.txt
latest/_static/: documentation_options.js
latest/api/: cysgp4.PyCoordGeodetic.html  cysgp4.PyCoordTopocentric.html  cysgp4.PyDateTime.html  cysgp4.PyEci.html  cysgp4.PyObserver.html  cysgp4.PyTle.html  cysgp4.Satellite.html  cysgp4.eci_to_geo.html  cysgp4.geo_to_eci.html  cysgp4.get_example_tles.html  cysgp4.lookangles.html  cysgp4.propagate_many.html  cysgp4.propagate_many_sgp4.html  cysgp4.propagate_many_slow.html  cysgp4.satellite_mean_motion.html  cysgp4.set_num_threads.html  cysgp4.test.html  cysgp4.tle_checksum.html  cysgp4.tle_linestrings_from_orbital_parameters.html  cysgp4.tle_tuples_from_text.html  cysgp4.tles_from_text.html
notebooks/: 01_science_satellites.ipynb  02_starlink_constellation.ipynb  03_satellite_frames.ipynb
src/libsgp4/: sgp4.pxd  sgp4.pyx
tests/: test_cysgp4.py
