[build-system]
requires = [
    "setuptools>=30.3.0",
    "wheel",
    "setuptools_scm>=6.2",
    "cython",  # >=0.29
    #"numpy==1.13.1",
    "numpy==1.13.1; python_version<'3.7'",
    "numpy==1.14.5; python_version=='3.7'",
    "numpy==1.18.1; python_version=='3.8'",
    "numpy==1.20.0; python_version=='3.9'",
    "numpy==1.22.0; python_version=='3.10'",
    ]
build-backend = "setuptools.build_meta"
