[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
filterwarnings = ignore::pytest.PytestUnknownMarkWarning
addopts = -p no:warnings
doctest_optionflags =
    NORMALIZE_WHITESPACE
    ELLIPSIS
    FLOAT_CMP

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[metadata]
description-file = README.rst
package_name = cysgp4
description = Cysgp4: a wrapper around the SGP4 package, for sat TLE calculations
long_description = Cysgp4 is a Cython-powered wrapper of the
    sgp4lib (Daniel Warner) library to compute satellite positions
    from two-line elements (TLE).
author = Benjamin Winkel
author_email = bwinkel@mpifr.de
license = GNU GPL v3+
url = https://github.com/bwinkel/cysgp4
edit_on_github = True
github_project = bwinkel/cysgp4
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy, numpy, cython
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.5
project_urls =
    Bug Tracker = https://github.com/bwinkel/cysgp4/issues
    Documentation = https://bwinkel.github.io/cysgp4/
    Source Code = https://github.com/bwinkel/cysgp4
classifiers =
    Intended Audience :: Science/Research
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: C++
    Programming Language :: Cython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
